--- a/Master Thesis/literatura.bib
+++ b/Master Thesis/literatura.bib
@@ -7,7 +7,7 @@
   journal = {Nature}
 }
 
-@ARTICLE{CNN,
+@article{CNN,
 	author={Lecun, Y. and Bottou, L. and Bengio, Y. and Haffner, P.},
 	journal={Proceedings of the IEEE}, 
 	title={Gradient-based learning applied to document recognition}, 
@@ -68,4 +68,93 @@
 	pdf = 	 {http://proceedings.mlr.press/v70/gilmer17a/gilmer17a.pdf},
 	url = 	 {https://proceedings.mlr.press/v70/gilmer17a.html},
 	abstract = 	 {Supervised learning on molecules has incredible potential to be useful in chemistry, drug discovery, and materials science. Luckily, several promising and closely related neural network models invariant to molecular symmetries have already been described in the literature. These models learn a message passing algorithm and aggregation procedure to compute a function of their entire input graph. At this point, the next step is to find a particularly effective variant of this general approach and apply it to chemical prediction benchmarks until we either solve them or reach the limits of the approach. In this paper, we reformulate existing models into a single common framework we call Message Passing Neural Networks (MPNNs) and explore additional novel variations within this framework. Using MPNNs we demonstrate state of the art results on an important molecular property prediction benchmark; these results are strong enough that we believe future work should focus on datasets with larger molecules or more accurate ground truth labels.}
+}
+
+@article{HGP2,
+	author = {Sergey Nurk  and Sergey Koren  and Arang Rhie  and Mikko Rautiainen  and Andrey V. Bzikadze  and Alla Mikheenko  and Mitchell R. Vollger  and Nicolas Altemose  and Lev Uralsky  and Ariel Gershman  and Sergey Aganezov  and Savannah J. Hoyt  and Mark Diekhans  and Glennis A. Logsdon  and Michael Alonge  and Stylianos E. Antonarakis  and Matthew Borchers  and Gerard G. Bouffard  and Shelise Y. Brooks  and Gina V. Caldas  and Nae-Chyun Chen  and Haoyu Cheng  and Chen-Shan Chin  and William Chow  and Leonardo G. de Lima  and Philip C. Dishuck  and Richard Durbin  and Tatiana Dvorkina  and Ian T. Fiddes  and Giulio Formenti  and Robert S. Fulton  and Arkarachai Fungtammasan  and Erik Garrison  and Patrick G. S. Grady  and Tina A. Graves-Lindsay  and Ira M. Hall  and Nancy F. Hansen  and Gabrielle A. Hartley  and Marina Haukness  and Kerstin Howe  and Michael W. Hunkapiller  and Chirag Jain  and Miten Jain  and Erich D. Jarvis  and Peter Kerpedjiev  and Melanie Kirsche  and Mikhail Kolmogorov  and Jonas Korlach  and Milinn Kremitzki  and Heng Li  and Valerie V. Maduro  and Tobias Marschall  and Ann M. McCartney  and Jennifer McDaniel  and Danny E. Miller  and James C. Mullikin  and Eugene W. Myers  and Nathan D. Olson  and Benedict Paten  and Paul Peluso  and Pavel A. Pevzner  and David Porubsky  and Tamara Potapova  and Evgeny I. Rogaev  and Jeffrey A. Rosenfeld  and Steven L. Salzberg  and Valerie A. Schneider  and Fritz J. Sedlazeck  and Kishwar Shafin  and Colin J. Shew  and Alaina Shumate  and Ying Sims  and Arian F. A. Smit  and Daniela C. Soto  and Ivan Sović  and Jessica M. Storer  and Aaron Streets  and Beth A. Sullivan  and Françoise Thibaud-Nissen  and James Torrance  and Justin Wagner  and Brian P. Walenz  and Aaron Wenger  and Jonathan M. D. Wood  and Chunlin Xiao  and Stephanie M. Yan  and Alice C. Young  and Samantha Zarate  and Urvashi Surti  and Rajiv C. McCoy  and Megan Y. Dennis  and Ivan A. Alexandrov  and Jennifer L. Gerton  and Rachel J. O’Neill  and Winston Timp  and Justin M. Zook  and Michael C. Schatz  and Evan E. Eichler  and Karen H. Miga  and Adam M. Phillippy },
+	title = {The complete sequence of a human genome},
+	journal = {Science},
+	volume = {376},
+	number = {6588},
+	pages = {44-53},
+	year = {2022},
+	doi = {10.1126/science.abj6987},
+	URL = {https://www.science.org/doi/abs/10.1126/science.abj6987},
+	eprint = {https://www.science.org/doi/pdf/10.1126/science.abj6987},
+	abstract = {Since its initial release in 2000, the human reference genome has covered only the euchromatic fraction of the genome, leaving important heterochromatic regions unfinished. Addressing the remaining 8\% of the genome, the Telomere-to-Telomere (T2T) Consortium presents a complete 3.055 billion–base pair sequence of a human genome, T2T-CHM13, that includes gapless assemblies for all chromosomes except Y, corrects errors in the prior references, and introduces nearly 200 million base pairs of sequence containing 1956 gene predictions, 99 of which are predicted to be protein coding. The completed regions include all centromeric satellite arrays, recent segmental duplications, and the short arms of all five acrocentric chromosomes, unlocking these complex regions of the genome to variational and functional studies.}
+}
+
+@article{HGP1,
+	title={Initial sequencing and analysis of the human genome},
+	volume={409},
+	DOI={10.1038/35057062},
+	number={6822},
+	journal={Nature},
+	author={Lander, Eric S. and Linton, Lauren M. and Birren, Bruce and Nusbaum, Chad and Zody, Michael C. and Baldwin, Jennifer and Devon, Keri and Dewar, Ken and Doyle, Michael and FitzHugh, William et al.},
+	year={2001},
+	pages={860-921}
+}
+
+@misc{genome_cost,
+	author = {NIH},
+	title = {The Cost of Sequencing a Human Genome},
+	year = {2021},
+	url = {https://www.genome.gov/about-genomics/fact-sheets/Sequencing-Human-Genome-cost}
+}
+
+@article {Vaser,
+	author = {Vaser, Robert and {\v S}iki{\'c}, Mile},
+	title = {Raven: a de novo genome assembler for long reads},
+	elocation-id = {2020.08.07.242461},
+	year = {2021},
+	doi = {10.1101/2020.08.07.242461},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {We present new methods for the improvement of de novo genome assembly from erroneous long-reads incorporated into a straightforward tool called Raven (https://github.com/lbcb-sci/raven). Raven maintains similar performance for various genomes and has accuracy on par with other assemblers which support third-generation sequencing data. It is one of the fastest options while having the lowest memory consumption on the majority of benchmarked datasets.Competing Interest StatementThe authors have declared no competing interest.},
+	URL = {https://www.biorxiv.org/content/early/2021/02/22/2020.08.07.242461},
+	eprint = {https://www.biorxiv.org/content/early/2021/02/22/2020.08.07.242461.full.pdf},
+	journal = {bioRxiv}
+}
+
+@article{DGL,
+	doi = {10.48550/ARXIV.1909.01315},
+	url = {https://arxiv.org/abs/1909.01315},
+	author = {Wang, Minjie and Zheng, Da and Ye, Zihao and Gan, Quan and Li, Mufei and Song, Xiang and Zhou, Jinjing and Ma, Chao and Yu, Lingfan and Gai, Yu and Xiao, Tianjun and He, Tong and Karypis, George and Li, Jinyang and Zhang, Zheng},
+	keywords = {Machine Learning (cs.LG), Machine Learning (stat.ML), FOS: Computer and information sciences, FOS: Computer and information sciences},
+	title = {Deep Graph Library: A Graph-Centric, Highly-Performant Package for Graph Neural Networks},
+	publisher = {arXiv},
+	year = {2019},
+	copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{GCN,
+	doi = {10.48550/ARXIV.1609.02907},
+	url = {https://arxiv.org/abs/1609.02907},
+	author = {Kipf, Thomas N. and Welling, Max},
+	keywords = {Machine Learning (cs.LG), Machine Learning (stat.ML), FOS: Computer and information sciences, FOS: Computer and information sciences},
+	title = {Semi-Supervised Classification with Graph Convolutional Networks},
+	publisher = {arXiv},
+	year = {2016},
+	copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{GATv2,
+	doi = {10.48550/ARXIV.2105.14491},
+	url = {https://arxiv.org/abs/2105.14491},
+	author = {Brody, Shaked and Alon, Uri and Yahav, Eran},
+	keywords = {Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+	title = {How Attentive are Graph Attention Networks?},
+	publisher = {arXiv},
+	year = {2021},
+	copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{GAT,
+	doi = {10.48550/ARXIV.1710.10903},
+	url = {https://arxiv.org/abs/1710.10903},
+	author = {Veličković, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Liò, Pietro and Bengio, Yoshua},
+	keywords = {Machine Learning (stat.ML), Artificial Intelligence (cs.AI), Machine Learning (cs.LG), Social and Information Networks (cs.SI), FOS: Computer and information sciences, FOS: Computer and information sciences},
+	title = {Graph Attention Networks},
+	publisher = {arXiv},
+	year = {2017},
+	copyright = {arXiv.org perpetual, non-exclusive license}
 }
