--- a/Master Thesis/literatura.bib
+++ b/Master Thesis/literatura.bib
@@ -158,3 +158,28 @@
 	year = {2017},
 	copyright = {arXiv.org perpetual, non-exclusive license}
 }
+
+@misc{de_novo1,
+	author = {Melbourne Bioinformatics},
+	title = {De novo Genome Assembly for Illumina Data},
+	url = {https://www.melbournebioinformatics.org.au/tutorials/tutorials/assembly/assembly-protocol/}
+}
+
+@misc{de_novo2,
+	author = {Illumina},
+	title = {Assembling novel genomes},
+	url = {https://www.illumina.com/techniques/sequencing/dna-sequencing/whole-genome-sequencing/de-novo-sequencing.html}
+}
+
+
+@misc{yeast,
+	author = {NCBI},
+	title = {Saccharomyces cerevisiae},
+	url = {https://www.ncbi.nlm.nih.gov/genome/?term=Saccharomyces%20cerevisiae[Organism]&cmd=DetailsSearch#:~:text=The%20Saccharomyces%20cerevisiae%20genome%20is,Mb%2C%20organized%20in%2016%20chromosomes.}
+}
+
+@misc{human,
+	author = {NCBI},
+	title = {Homo sapiens},
+	url = {https://www.ncbi.nlm.nih.gov/genome/?term=Homo+sapiens}
+}
